
[Test_FullWorkflow_Create_S3_Binary_Text - 1]
>>>S3ApiMockClient.GetObjectAttributes.Input
{
  Bucket: "..",
  Key: "../test-secrets/binary/sopsfile.enc-age.binary",
  ObjectAttributes: ["ETag"]
}
---

[Test_FullWorkflow_Create_S3_Binary_Text - 2]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/binary/sopsfile.enc-age.binary"
}
---

[Test_FullWorkflow_Create_S3_Binary_Text - 3]
>>>SecretsManagerMockClient.PutSecretValue.Input
main.putSecretValueInputNotSecure{
    _:                  struct {}{},
    ClientRequestToken: &"some-32-character-long-string-ab",
    RotationToken:      (*string)(nil),
    SecretBinary:       nil,
    SecretId:           &"arn:aws:secretsmanager:eu-central-1:123456789012:secret:testsecret",
    SecretString:       &"-----BEGIN RSA PRIVATE KEY-----\nMIICXQIBAAKBgQDVd/OAdqlMznWINBDoyR+PESgQJlUptwnh/vzbgAaIuHl4gN7Q\nW2Jx06bKFgv8yAQ4ouR0EaPv43X1pWFUyE/vK4e2A4M28Ciriy5r2TiBx57EL7bA\nAiiCaEvpKx3uAtTgFYcdLdD5xYKUf51gymZ6wU8BBgYMkVlL5rpGmR7ddQIDAQAB\nAoGAaeEXG+6/RmNZFHeOs4eeaZ2+21PIBerNshSBYnX7x7CIP2bcHUhWadLq9W0+\nAOFMhrL00UU2pPOTPIYM4rqAOl5PvPeV4GNMvI+9/619p/ZNMbnvj43KqUtaPp1g\nJyT22CH4TqDC2io8S9xWxxh9AgvgOI/ekJ3h4PdYpmyVUXkCQQD6b1dkYhlgiy3u\nZ84L5WM+7vXG2ivA3N3T5eYJdsQFvlV6gNSqbKcxIR+cFK0RaRiWrd7U2IOM67RF\nYRvHNN0rAkEA2jZRXVjHjTZSuAVDMOA4cc6pgxOqByg14clWgRDtbueIMHNCYLJY\nbi5YE0kqzjSaH2WbeT7LX1q3S7amoN4f3wJBALw9ZrYYmrSbyRmTQyhj8raCTZF7\nujmMitzUyJVChVM/3uZm4fN8GivuluDuFaypj4brCDx6xl7taKJhvMx+quMCQF/C\nZoJoa2n05OgMpyfTvfFzl8AF6R+q7bpf+K47F3cL9CAO9JoqqdPwUoZkHXzQaLJO\njKPwgp8d2EJJrWX7FFECQQCRMPE4WsTCLXmVefZne7k000WPclZ4pIjggz1lpGgN\n23bwNOla1k4/B10btnEzNi16/b01Kf3K4hYaicd46sLH\n-----END RSA PRIVATE KEY-----",
    VersionStages:      nil,
}
---

[Test_FullWorkflow_Create_S3_Binary_Text - 4]
>>>syncSopsToSecretsmanager
arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret
map[string]interface {}{
    "ARN":           "arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret",
    "Name":          "dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    "VersionId":     "afe1e68ea88d603e524fc4854b2f33e8f56ce0cc80b539d21fddcbf82586fb38",
    "VersionStages": []*string{
        &"dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    },
}
nil
---

[Test_FullWorkflow_Create_S3_Binary_Binary - 1]
>>>S3ApiMockClient.GetObjectAttributes.Input
{
  Bucket: "..",
  Key: "../test-secrets/binary/samplebin.enc-age",
  ObjectAttributes: ["ETag"]
}
---

[Test_FullWorkflow_Create_S3_Binary_Binary - 2]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/binary/samplebin.enc-age"
}
---

[Test_FullWorkflow_Create_S3_Binary_Binary - 3]
>>>SecretsManagerMockClient.PutSecretValue.Input
main.putSecretValueInputNotSecure{
    _:                  struct {}{},
    ClientRequestToken: &"some-32-character-long-string-ab",
    RotationToken:      (*string)(nil),
    SecretBinary:       {0xcf, 0xfa, 0xed, 0xfe, 0xc, 0x0, 0x0, 0x1, 0xfd, 0xcb, 0x2b, 0x77, 0xa4, 0xb1, 0xb, 0x52},
    SecretId:           &"arn:aws:secretsmanager:eu-central-1:123456789012:secret:testsecret",
    SecretString:       (*string)(nil),
    VersionStages:      nil,
}
---

[Test_FullWorkflow_Create_S3_Binary_Binary - 4]
>>>syncSopsToSecretsmanager
arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret
map[string]interface {}{
    "ARN":           "arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret",
    "Name":          "dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    "VersionId":     "caf1a8e50cc8dbef8d99ca8b726a17dd39db01780c15f01b565fe968d7ad09cd",
    "VersionStages": []*string{
        &"dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    },
}
nil
---
